# chimera-factory

./: .coderabbit.yaml  .dockerignore  .env.example  .gitignore  COMMIT_MESSAGE.txt  CONTRIBUTING.md  Dockerfile  LOOM_RECORDING_CHECKLIST.md  LOOM_VIDEO_QUICK_GUIDE.md  LOOM_VIDEO_SCRIPT.md  MCP_SENSE_CHECKLIST.md  MCP_SENSE_VERIFICATION.md  Makefile  README.md  START_DATABASE.md  SUBMISSION_CHECKLIST.md  docker-compose.override.yml.example  docker-compose.yml  main.py  pyproject.toml
.cursor/: mcp.json  rules
.github/workflows/: README.md  ai-review.yml  ci.yml  main.yml
docs/: AI_REVIEW_SETUP.md  API.md  DOCKER.md  FRONTEND_TEST.md  MCP_INTEGRATION.md  REPOSITORY_SIZE_OPTIMIZATION.md  TEST_CRITERIA.md  mcp.json.example
docs/adr/: ADR-001-hybrid-database-architecture.md  ADR-002-spec-driven-development.md
research/: architecture_strategy.md  enhancements_summary.md  github_verification_complete.md  mcp_setup_notes.md  project_cleanup_summary.md  research_notes.md  submission_report_feb4.md  submission_report_feb5_task_2.md  task1_completion_summary.md  tooling_strategy.md
scripts/: create_submission_repo.sh  init-db.sql  optimize_repo_size.sh  run_api.py  validate_task2.py
skills/: README.md
skills/skill_content_generate/: README.md  contract.json
skills/skill_engagement_manage/: README.md  contract.json
skills/skill_trend_research/: README.md  contract.json
specs/: __init__.py  _meta.md  frontend_requirements.md  functional.md  openclaw_integration.md  security_policy.md  technical.md
specs/api/: orchestrator.yaml
specs/database/: erd.md  schema.sql
specs/skills/: README.md  __init__.py
src/chimera_factory/: __init__.py  exceptions.py
src/chimera_factory/api/: __init__.py  main.py  models.py
src/chimera_factory/api/routers/: __init__.py  agents.py  approvals.py  campaigns.py  content.py  engagement.py  openclaw.py  trends.py
src/chimera_factory/api_clients/: __init__.py  base.py  content_apis.py  engagement_apis.py  trend_apis.py
src/chimera_factory/cache/: __init__.py  redis_client.py
src/chimera_factory/db/: __init__.py  connection.py  models.py
src/chimera_factory/openclaw/: __init__.py  models.py  service.py  status_service.py
src/chimera_factory/security/: __init__.py  containment.py
src/chimera_factory/skills/: __init__.py  _validation.py  skill_content_generate.py  skill_engagement_manage.py  skill_trend_research.py
src/chimera_factory/trends/: __init__.py  models.py
src/chimera_factory/utils/: __init__.py  logging.py  rate_limit.py
static/: hitl-review.html
static/css/: styles.css
tests/: README.md  __init__.py
tests/contracts/: __init__.py  test_skills_interface.py  test_trend_fetcher.py
tests/e2e/: __init__.py  test_example.py
tests/integration/: ENDPOINT_TEST_COVERAGE.md  __init__.py  test_api.py  test_database.py  test_example.py  test_openclaw.py  test_skills_integration.py
tests/security/: __init__.py  test_containment.py
tests/unit/: __init__.py  test_example.py  test_init.py
