[project]
name = "chimera-factory"
version = "0.1.0"
description = "Project Chimera: The Factory that builds Autonomous AI Influencers"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/chimera_factory"]

# Note: dev-dependencies is deprecated but still works
# Will migrate to dependency-groups when uv fully supports it
[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.8.0",
    "ruff>=0.1.0",
]
